Robust slider touch: axis lock, scroll isolation, flash fix, track alignment

--- a/src/components/Tracker/Tracker.css
+++ b/src/components/Tracker/Tracker.css
@@ -533,7 +533,7 @@
   -webkit-appearance: none !important;
   appearance: none !important;
   -webkit-tap-highlight-color: transparent;
-  touch-action: none;
+  touch-action: pan-y;
 }
 
 .benefit-slider input[type="range"]::-webkit-slider-runnable-track {
